--- a/big2-ps3-pak-research/big2-ps3-pak-research.vcxproj
+++ b/big2-ps3-pak-research/big2-ps3-pak-research.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="src\pak-entries\debug-info.h" />
     <ClInclude Include="src\pak-entries\havok-data.h" />
     <ClInclude Include="src\pak-entries\materialtable.h" />
+    <ClInclude Include="src\pak-entries\region-tree.h" />
     <ClInclude Include="src\pak-entries\spawner-group.h" />
     <ClInclude Include="src\pak-entries\vis-info.h" />
     <ClInclude Include="src\utils\sidbase\sidbase.h" />
@@ -95,6 +96,7 @@
     <ClCompile Include="src\package\package.cpp" />
     <ClCompile Include="src\pak-entries\havok-data.cpp" />
     <ClCompile Include="src\pak-entries\materialtable.cpp" />
+    <ClCompile Include="src\pak-entries\region-tree.cpp" />
     <ClCompile Include="src\pak-entries\spawner-group.cpp" />
     <ClCompile Include="src\pak-entries\vis-info.cpp" />
     <ClCompile Include="src\utils\sidbase\sidbase.cpp" />
